added avarage raiting

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -48,6 +48,10 @@
                             <p>Продолжительность</p>
                             <p><%=film.time%> мин</p>
                         </div>
+                        <div class="film-details">
+                            <p>Рейтинг</p>
+                            <p><%=averageRate%> </p>
+                        </div>
                     </div>
                 </div>
                 <% if (film.video){
