added google auth

--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -24,7 +24,8 @@
                 </fieldset>
 
                 <p>У вас нет АККАУНТА?  <a href="/register">Зарегистрироваться</a></p>
-
+                <p>Войти с помощью </p>
+                <a href="/api/auth/google">Google</a>
 
             </form>
         </div>
