--- a/public/style/all.css
+++ b/public/style/all.css
@@ -7,4 +7,5 @@
 @import url('pages/profile.css');
 @import url('pages/admin.css');
 @import url('pages/detail.css');
-@import url('components/comments.css')
+@import url('components/comments.css');
+@import url('components//serial.css')
