--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -42,7 +42,7 @@
                         </div>
                         <div class="film-details">
                             <p>Жанр</p>
-                            <p><%=film.ganre.name%></p>
+                            <p><%=film.genre.name%></p>
                         </div>
                         <div class="film-details">
                             <p>Продолжительность</p>
