--- a/views/AdminProfile.ejs
+++ b/views/AdminProfile.ejs
@@ -69,7 +69,7 @@
                         
                         <%
                         films.forEach(item=>{
-                            // console.log('item=   ',item)
+                            console.log('item from adminProfile=   ',item)
                         %>
                         
                         <div class="main-card ">
@@ -83,7 +83,7 @@
                                     <a>Год выпуска :<%=item.year%></a>
                                     <a>Продолжительность :<%=item.time%></a>
                                     <a href="" style="text-decoration: none;color:black">Страна производитель: <%=item.country.name%></a>
-                                    <a href="" style="text-decoration: none;color:black">Жанр: <%=item.ganre.name%></a>
+                                    <a href="" style="text-decoration: none;color:black">Жанр: <%=item.genre.name%></a>
                                     <a href="" style="text-decoration: none;color:black">Автор: <%=item.author.full_name%></a>
                                    <br>
                                    
