--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -54,12 +54,23 @@
                         </div>
                     </div>
                 </div>
-                <% if (film.video){
-                     %>
-                    <div class="film-player">
-                        <iframe width="560" height="315" src="<%=film.video%>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
-                <%}%>
+                <%console.log('film video',film) 
+                if (film.video){ %>
+                <div class="film-player">
+                    <iframe width="560" height="315" src="<%=(film.video)%>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            <%
+                }else if(film.series.length > 0){ 
+                    film.series.forEach((link, num) =>{
+            %>
+                <p><%= num + 1 %> серия</p>
+                <div class="film-player">
+                    <iframe width="560" height="315" src="<%=(link)%>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            <%
+                    }) 
+                } 
+            %>
                 
                 <br><br><br>
 
